--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-    <title >chrome easter egg: t-rex runner</title>
+    <title >Astromust runner</title>
     <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src="index.js"></script>
 </head>
 
 <body id="t" class="offline">
-    <div id="messageBox" class="sendmessage">
-         <h1 style="text-align: center;font-family: 'Open Sans', sans-serif;">Press Space to start</h1>
-         <div class="niokbutton" onclick="okbuttonsend()"></div>
-    </div>
+
     <div id="main-frame-error" class="interstitial-wrapper">
+        <div id="messageBox" class="sendmessage">
+            <svg xmlns="http://www.w3.org/2000/svg" width="290" height="60" viewBox="0 0 291 60">
+                <g id="Path_22691" data-name="" fill="rgba(238,165,0,0.4)">
+                    <path d="M 290.5 59.5 L 15.16070938110352 59.5 L 0.5 44.79335021972656 L 0.5 0.5 L 275.7822265625 0.5 L 290.5 16.32163619995117 L 290.5 59.5 Z" stroke="none"></path>
+                    <path d="M 1 1 L 1 44.58668518066406 L 15.36825561523438 59 L 290 59 L 290 16.51826095581055 L 275.564453125 1 L 1 1 M 0 0 L 276 0 L 291 16.12503814697266 L 291 60 L 14.953125 60 L 0 45 L 0 0 Z" stroke="none" fill="#eea500"></path>
+                </g>
+            </svg>
+            <span class="button-text">Click or press Space</span>
+        </div>
         <div id="main-content">
             <div class="icon icon-offline" alt=""></div>
         </div>
@@ -32,13 +38,10 @@
 </body>
 
 <script>
-    document.onkeydown = function(evt) {
-    evt = evt || window.event;
-    if (evt.keyCode == 32) {
-        var box = document.getElementById("messageBox");
-        box.style.visibility="hidden";
-    }
-};
+    /*document.onkeydown = (evt) => {
+        evt = evt || window.event;
+        if (evt.keyCode === 32) hideMessageBox();
+    };*/
 </script>
-    
+
 </html>
