Change play button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <path d="M 1 1 L 1 44.58668518066406 L 15.36825561523438 59 L 290 59 L 290 16.51826095581055 L 275.564453125 1 L 1 1 M 0 0 L 276 0 L 291 16.12503814697266 L 291 60 L 14.953125 60 L 0 45 L 0 0 Z" stroke="none" fill="#eea500"></path>
                 </g>
             </svg>
-            <span class="button-text">Click or press Space</span>
+            <span class="button-text">Play Astrojump</span>
         </div>
         <div id="main-content">
             <div class="icon icon-offline" alt=""></div>
