--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src="index.js"></script>
+    <link rel="icon" href="assets/Elonmust_Favicon.png" sizes="32x32">
+    <link rel="icon" href="assets/Elonmust_Favicon.png" sizes="192x192">
 </head>
 
 <body id="t" class="offline">
 
     <div id="main-frame-error" class="interstitial-wrapper">
         <div id="messageBox" class="sendmessage">
-            <svg xmlns="http://www.w3.org/2000/svg" width="190" viewBox="0 0 291 60">
+            <svg xmlns="http://www.w3.org/2000/svg" width="188" viewBox="0 0 291 60">
                 <g id="Path_22691" data-name="" fill="rgba(77,255,255,0.7)">
                     <path d="M 290.5 59.5 L 15.16070938110352 59.5 L 0.5 44.79335021972656 L 0.5 0.5 L 275.7822265625 0.5 L 290.5 16.32163619995117 L 290.5 59.5 Z" stroke="none"></path>
                     <path d="M 1 1 L 1 44.58668518066406 L 15.36825561523438 59 L 290 59 L 290 16.51826095581055 L 275.564453125 1 L 1 1 M 0 0 L 276 0 L 291 16.12503814697266 L 291 60 L 14.953125 60 L 0 45 L 0 0 Z" stroke="none" fill="#4dffff"></path>
