Add ranking system

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <span class="button-text">Play Astrojump</span>
         </div>
         <div id="main-content">
+            <div id="rank-wrapper">rank <span id="rank-value">RECRUIT</span></div>
             <div class="icon icon-offline" alt=""></div>
         </div>
         <div id="offline-resources">
