--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body id="t" class="offline">
-
     <div id="main-frame-error" class="interstitial-wrapper">
-        <div id="messageBox" class="sendmessage">
+        <img id="logo" src="assets/astromust_logo.jpg">
+        <div id="messageBox">
             <svg xmlns="http://www.w3.org/2000/svg" width="188" viewBox="0 0 291 60">
                 <g id="Path_22691" data-name="" fill="rgba(77,255,255,0.7)">
                     <path d="M 290.5 59.5 L 15.16070938110352 59.5 L 0.5 44.79335021972656 L 0.5 0.5 L 275.7822265625 0.5 L 290.5 16.32163619995117 L 290.5 59.5 Z" stroke="none"></path>
